infra/k8s/app-base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  namespace: todo-app
spec:
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      serviceAccountName: backend-sa
      containers:
      - name: todo-backend
        image: 881490098269.dkr.ecr.ap-northeast-1.amazonaws.com/todo-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3002
        resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 100m
