infra/k8s/app-base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: todo-backend
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
