infra/k8s/app-base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: todo-app
  labels:
    app: frontend
spec:
  selector:
    app: todo-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
