infra/k8s/app-base/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: dns-01-production
    nginx.ingress.kubernetes.io/hsts: "false"
    nginx.ingress.kubernetes.io/hsts-max-age: "0"
    external-dns.alpha.kubernetes.io/hostname: grafana.natsuki-cloud.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
    external-dns.alpha.kubernetes.io/owner-id: k8s
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: grafana-auth
    nginx.ingress.kubernetes.io/auth-realm: "Grafana SRE Dashboard - Authentication Required"
spec:
  ingressClassName: external-nginx
  rules:
    - host: grafana.natsuki-cloud.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-operator-grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.natsuki-cloud.dev
      secretName: grafana-natsuki-cloud-dev
