infra/k8s/app-base/prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: dns-01-production
    nginx.ingress.kubernetes.io/hsts: "false"
    nginx.ingress.kubernetes.io/hsts-max-age: "0"
    external-dns.alpha.kubernetes.io/hostname: prometheus.natsuki-cloud.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
    external-dns.alpha.kubernetes.io/owner-id: k8s
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: prometheus-auth
    nginx.ingress.kubernetes.io/auth-realm: "Prometheus SRE Metrics - Authentication Required"
spec:
  ingressClassName: external-nginx
  rules:
    - host: prometheus.natsuki-cloud.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-operator-kube-p-prometheus
                port:
                  number: 9090
  tls:
    - hosts:
        - prometheus.natsuki-cloud.dev
      secretName: prometheus-natsuki-cloud-dev
